--- a/index2.html
+++ b/index2.html
@@ -39,15 +39,15 @@
             </div>
             <div class="form-group">
                 <label>Gender</label>
-                <input type="radio" name="gender" value=1 checked> Male
-                <input type="radio" name="gender" value=2> Female
-                <input type="radio" name="gender" value=3> Other
+                <input type="radio" name="gender" value='male' checked> Male
+                <input type="radio" name="gender" value='female'> Female
+                <input type="radio" name="gender" value='other'> Other
             </div>
             <div class="form-group">
                 <label>Sở Thích</label>
-                <input type="checkbox" name="a" value=1 checked> Chơi
-                <input type="checkbox" name="a" value=2> Học
-                <input type="checkbox" name="a" value=3> Ăn
+                <input type="checkbox" name="a" value='choi' > Chơi
+                <input type="checkbox" name="a" value='hoc'> Học
+                <input type="checkbox" name="a" value='an'> Ăn
             </div>
             <div class="form-group">
                 <label>Sở Thích</label>
