--- a/index2.html
+++ b/index2.html
@@ -45,13 +45,13 @@
             </div>
             <div class="form-group">
                 <label>Sở Thích</label>
-                <input type="checkbox" name="a" value='choi' > Chơi
+                <input type="checkbox" name="a" value='choi' checked> Chơi
                 <input type="checkbox" name="a" value='hoc'> Học
                 <input type="checkbox" name="a" value='an'> Ăn
             </div>
             <div class="form-group">
-                <label>Sở Thích</label>
-                <textarea cols="30" rows="5"></textarea>
+                <label>Gioi thieu</label>
+                <textarea name="textarea" cols="30" rows="5"></textarea>
             </div>
             <div class="form-group">
                 <label></label>
