--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
 <div class="header">
     <div class="row">
         <div class="col-2 col-s-12" id="logo">Đây là logo</div>
-        <div class="col-10 col-s-12" id="banner"> Đây là log</div>
+        <div class="col-10 col-s-12" id="banner"> Đây là banner</div>
     </div>
     <div class="row">
         <div class="col-12" id="slogan">
@@ -61,7 +61,11 @@
     </div>
     <div class="col-3 col-s-12 text3"></div>
 </div>
-<div class="footer">Footer</div>
+<div class="footer">
+    <p>Name:Dương Quang Phú</p>
+    <p>Email:phudqth1807022@fpt.edu.vn</p>
+    <p>sdt:0969617760</p>
+</div>
 <script src="js/myjs.js"></script>
 </body>
 </html>
